// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown.vue should render dropdown with slots 1`] = `
<div
  class=""
>
  <button
    class="btn"
    type="button"
  >
    
     
    <i
      class="fa fa-caret-down"
    />
  </button>
   
  <div
    class="hue-dropdown-container"
  >
    <div
      class="hue-dropdown-menu"
    >
      <ul>
        <div>
          Some item
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown.vue should render empty dropdown 1`] = `
<div
  class=""
>
  <button
    class="btn"
    type="button"
  >
    
     
    <i
      class="fa fa-caret-down"
    />
  </button>
   
  <div
    class="hue-dropdown-container"
  >
    <div
      class="hue-dropdown-menu"
    >
      <ul />
    </div>
  </div>
</div>
`;
